--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="/client/src/main.tsx" type="module"></script>
+        <script src='/client/src/main.tsx' type="module"></script>
     </body>
 </html>
