--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link
         href='https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap'
         rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel='stylesheet'
           href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css'
           integrity='sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY='
