Add MainMenu for navigation, edit layout and spacing for AppLayout (WIP)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link
         href='https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap'
         rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel='stylesheet'
