Refactor quest share feature (removed dialog, added to leaderboard) WIP

--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset='UTF-8'/>
     <link rel='icon' type='image/svg+xml' href='/vite.svg'/>
+    <!-- Optimized font loading with preconnect for faster DNS/connection -->
     <link rel='preconnect' href='https://fonts.googleapis.com'>
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-    <link
-        href='https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap'
-        rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Load only the fonts actually used in the app -->
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&family=Barlow+Semi+Condensed:wght@700&display=swap" rel="stylesheet">
 
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-    <title>Vite + React + TS</title>
+    <title>wilderQuest - Join a community of explorers</title>
 </head>
 <body>
 <div id='root'></div>
